# onemoon

./: .gitignore  AGENTS.md  CHANGELOG.md  PLAN.md  README.md  package-lock.json  package.json
apps/backend/: .env.example  README.md  pyproject.toml
apps/backend/src/onemoon_backend/: auth.py  config.py  db.py  main.py  models.py  schemas.py  storage.py
apps/backend/src/onemoon_backend/api/: __init__.py  auth.py  documents.py  projects.py
apps/backend/src/onemoon_backend/services/: figure_assets.py  latex.py  llm.py  pipeline.py  segmentation.py  typst.py
apps/backend/tests/: test_config.py  test_conversion_api.py  test_latex.py  test_llm.py  test_polygon_blocks.py  test_segmentation.py  test_upload_api.py
apps/frontend/: .env.example  README.md  index.html  package-lock.json  package.json
apps/frontend/src/: App.tsx  index.css  main.tsx
apps/frontend/src/components/: BlockInspector.tsx  BlockPreviewCard.tsx  CanvasTooltip.tsx  ConversionModeToolbar.tsx  DocumentCanvas.tsx  DraftActionBar.tsx  EditorToolbar.tsx  PageProgressSummary.tsx  ThemeToggle.tsx  WorkspaceDebugToolbar.tsx  WorkspaceModeNavigation.tsx
apps/frontend/src/lib/: AuthProvider.tsx  api.ts  auth.ts  debug.ts  documentExport.ts  segmentation.ts  theme.tsx  types.ts  workspaceDebug.ts
apps/frontend/src/pages/: LoginPage.tsx  ProjectsPage.tsx  WorkspacePage.tsx
apps/frontend/src/pages/workspace/: WorkspaceDocumentPreview.tsx  WorkspaceMergedCodePanel.tsx  WorkspacePageSidebar.tsx  WorkspaceReviewPanel.tsx  (+1 more)
assets/: documents_index.tsv
scripts/: generate_documents_tsv.py
