[project]
name = "onemoon-backend"
version = "0.1.0"
description = "Backend API for the OneMoon note-to-LaTeX workflow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pillow>=11.2.1",
    "pydantic-settings>=2.8.1",
    "pymupdf>=1.25.5",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.40",
    "opencv-python-headless>=4.11.0.86",
    "numpy>=2.2.4",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
onemoon-backend = "onemoon_backend:run"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
]

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
